--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "eslint-config-airbnb": "^19.0.4",
     "firebase": "^9.6.5",
     "firebase-tools": "^10.1.2",
     "mui-image": "^1.0.4",
@@ -45,5 +46,8 @@
   },
   "resolutions": {
     "mini-css-extract-plugin": "2.4.5"
-  }
+  },
+  "scripts": {
+    "lint" : "./node_modules/.bin/eslint"
+ }
 }
