--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "mui-image": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-social-login-buttons": "^3.6.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
