--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
         "react/prop-types": "off",
         "react/jsx-no-constructed-context-values": "off",
         "object-curly-newline": "off",
-        "linebreak-style":"off"
+        "linebreak-style":"off",
+        "max-len":"off",
+        "react/jsx-no-bind":"off"
     }
 }
