--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-social-login-buttons": "^3.6.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
